1.2.6 2012-12-21
----------------
- domain sockets shouldn't require a port arg (Issue #815, https://github.com/aheckmann)
- Cannot read property 'info' of null (Issue #809, https://github.com/thesmart)
- Cursor.each should work in batches (Issue #804, https://github.com/Swatinem)

1.2.5 2012-12-12
----------------
- Fixed ssl regression, added more test coverage (Issue #800)
- Added better error reporting to the Db.connect if no valid serverConfig setup found (Issue #798)

1.2.4 2012-12-11
----------------
- Fix to ensure authentication is correctly applied across all secondaries when using MongoClient.

1.2.3 2012-12-10
----------------
- Fix for new replicaset members correctly authenticating when being added (Issue #791, https://github.com/m4tty)
- Fixed seek issue in gridstore when using stream (Issue #790)

1.2.2 2012-12-03
----------------
- Fix for journal write concern not correctly being passed under some circumstances.
- Fixed correct behavior and re-auth for servers that get stepped down (Issue #779).

1.2.1 2012-11-30
----------------
- Fix for double callback on insert with w:0 specified (Issue #783)
- Small cleanup of urlparser.

1.2.0 2012-11-27
----------------
- Honor connectTimeoutMS option for replicasets (Issue #750, https://github.com/aheckmann)
- Fix ping strategy regression (Issue #738, https://github.com/aheckmann)
- Small cleanup of code (Issue #753, https://github.com/sokra/node-mongodb-native)
- Fixed index declaration using objects/arrays from other contexts (Issue #755, https://github.com/sokra/node-mongodb-native)
- Intermittent (and rare) null callback exception when using ReplicaSets (Issue #752)
- Force correct setting of read_secondary based on the read preference (Issue #741)
- If using read preferences with secondaries queries will not fail if primary is down (Issue #744)
- noOpen connection for Db.connect removed as not compatible with autodetection of Mongo type
- Mongos connection with auth not working (Issue #737)