@@ -301,15 +301,17 @@ Cursor.prototype.limit = function(limit, callback) {
  */
 Cursor.prototype.setReadPreference = function(readPreference, tags, callback) {
   if(typeof tags == 'function') callback = tags;
-  callback = callback || function() {};
 
   if(this.queryRun == true || this.state == Cursor.CLOSED) {
+    if(callback == null) throw new Error("Cannot change read preference on executed query or closed cursor");
     callback(new Error("Cannot change read preference on executed query or closed cursor"));
-  } else if(readPreference == null && readPreference != 'primary'
+  } else if(readPreference != null && readPreference != 'primary'
     && readPreference != 'secondaryOnly' && readPreference != 'secondary') {
+      if(callback == null) throw new Error("only readPreference of primary, secondary or secondaryOnly supported");
       callback(new Error("only readPreference of primary, secondary or secondaryOnly supported"));
   } else {
     this.read = readPreference;
+    if(callback != null) callback(null, this);
   }
 
   return this;
